fix the z-index to correct value

--- a/css/style.css
+++ b/css/style.css
@@ -50,8 +50,8 @@ header {
   left: 0;
   right: 0;
   padding: 20px 0;
-  opacity: 1;
-  z-index: 3px;
+  opacity: .75;
+  z-index: 4;
 }
 
 header nav ul li {
